--- a/src/styles/visualizations.css
+++ b/src/styles/visualizations.css
@@ -610,6 +610,11 @@
   display: flex;
   flex-direction: column;
   height: min-content;
+  transition: background-color 0.4s ease;
+}
+
+.polaroid-content.liked-polaroid {
+  background-color: var(--color-rose-50);
 }
 
 .polaroid-content img {
